Fixed swiper app width overflow

--- a/src/components/SwiperApp.css
+++ b/src/components/SwiperApp.css
@@ -9,18 +9,27 @@
     }
   }
 
-.swiper {
-    width: 78%;
-/* height: 800px; */
+/* Removes the grey background */
+.swiper-3d .swiper-slide-shadow {
+    background: rgba(0,0,0,0);
 }
 
-.swiper-3d .swiper-slide-shadow {
-background: rgba(0,0,0,0);
+.mySwiper{
+    height: 100%; 
+    /* max-height: 100vw; */
+    min-height: 0;
+    min-width: 0;
+    max-width: 100vw; 
+    width: 100%;
+    overflow: hidden;
+  }
+
+.swiper-wrapper{
+  max-height: 100%;
+  height: 100%;
+  display: flex;  
 }
 
 .swiper-slide {
-/* display: flex; */
-align-items: flex-end;
-justify-content: center;
-/* border-radius: 18px; */
+    justify-content: center;
 }
